--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -31,4 +31,5 @@ jobs:
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
+        record: true
         start: npm run start
