--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,4 +32,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
         record: true
+        parallel: true
         start: npm run start
