--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,5 +1,9 @@
 name: Cypress Tests
-on: [pull_request]
+on:
+  pull_request:
+    types: [opened]
+    branches:
+      - main
 jobs:
  Cypress-Test:
    runs-on: ubuntu-20.04
